--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.197",
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.2",
+    "lodash": "^4.17.21",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
