--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/uuid": "^9.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.269.0",
     "prettier": "^3.0.2",
